; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_cyttsp4_core.c_cyttsp4_stop_wd_timer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/touchscreen/extr_cyttsp4_core.c_cyttsp4_stop_wd_timer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cyttsp4 = type { i32, i32 }

@CY_WATCHDOG_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cyttsp4*)* @cyttsp4_stop_wd_timer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cyttsp4_stop_wd_timer(%struct.cyttsp4* %0) #0 {
  %2 = alloca %struct.cyttsp4*, align 8
  store %struct.cyttsp4* %0, %struct.cyttsp4** %2, align 8
  %3 = load i32, i32* @CY_WATCHDOG_TIMEOUT, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %16

6:                                                ; preds = %1
  %7 = load %struct.cyttsp4*, %struct.cyttsp4** %2, align 8
  %8 = getelementptr inbounds %struct.cyttsp4, %struct.cyttsp4* %7, i32 0, i32 0
  %9 = call i32 @del_timer_sync(i32* %8)
  %10 = load %struct.cyttsp4*, %struct.cyttsp4** %2, align 8
  %11 = getelementptr inbounds %struct.cyttsp4, %struct.cyttsp4* %10, i32 0, i32 1
  %12 = call i32 @cancel_work_sync(i32* %11)
  %13 = load %struct.cyttsp4*, %struct.cyttsp4** %2, align 8
  %14 = getelementptr inbounds %struct.cyttsp4, %struct.cyttsp4* %13, i32 0, i32 0
  %15 = call i32 @del_timer_sync(i32* %14)
  br label %16

16:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @del_timer_sync(i32*) #1

declare dso_local i32 @cancel_work_sync(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
